deployment/istio/authz/authz-auth-apisix.yaml
# Copyright (C) 2024-2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-apisix
  namespace: auth-apisix
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: apisix
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/auth-apisix/sa/auth-apisix-ingress-controller
        - cluster.local/ns/rag-ui/sa/chat-qna-ui-app
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-apisix-etcd
  namespace: auth-apisix
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: etcd
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/auth-apisix/sa/auth-apisix
