deployment/istio/authz/authz-rag-ui.yaml
# Copyright (C) 2024-2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: rag-ui-rag-ui
  namespace: rag-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ui-app
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/ingress-nginx/sa/ingress-nginx
