deployment/istio/authz/authz-system.yaml
# Copyright (C) 2024-2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-apisix-etcd
  namespace: auth-apisix
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gmc
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals:
        - cluster.local/ns/auth-apisix/sa/auth-apisix
